Lots of updates to the pages

--- a/RO/index.html
+++ b/RO/index.html
@@ -66,7 +66,7 @@
     <main>
         <section class="hero">
             <div class="hero__background-block" id="heroBackgroundBlock">
-                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">UI/UX Designer</h2>
+                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">Aspectul site-ului web</h2>
                 <h2 class="hero__background-title right" data-lang-key="heroBackgroundTitleRight">Frontend Developer</h2>
             </div>
             <div class="container hero__block">
@@ -94,8 +94,7 @@
                 <div class="about__block">
                     <h2 class="about__title" data-lang-key="aboutTitle">Despre mine</h2>
                     <p class="about__descr" data-lang-key="aboutDescription">
-                        Salut, eu sunt Alexandru, pasionat de crearea soluțiilor orientate către utilizator. Sunt specializat în
-                        design UI/UX,
+                        Salut, eu sunt Alexandru, pasionat de crearea soluțiilor orientate către utilizator. Sunt specializat în layout de site-uri web,
                         dezvoltare frontend și design grafic, și cunosc HTML, CSS, JavaScript, Node.js, jQuery,
                         Bootstrap și Figma. În afară de codare, îmi place să joc jocuri video, să fac design grafic și să ascult
                         muzică. Haideți să discutăm și să aducem ideile voastre digitale la viață.
@@ -151,7 +150,7 @@
                                     <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="../img/php_icon_130857.webp" alt="PHP">
                                     <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
@@ -172,7 +171,7 @@
                                     <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="../img/php_icon_130857.webp" alt="PHP">
                                     <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
