--- a/RO/trinity.html
+++ b/RO/trinity.html
@@ -100,7 +100,7 @@
                                 <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                 <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                 <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="../img/php_icon_130857.webp" alt="PHP">
                                 <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
