--- a/RU/index.html
+++ b/RU/index.html
@@ -59,7 +59,7 @@
     <main>
         <section class="hero">
             <div class="hero__background-block" id="heroBackgroundBlock">
-                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">UI/UX Дизайнер</h2>
+                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">Вёрстка сайтов</h2>
                 <h2 class="hero__background-title right" data-lang-key="heroBackgroundTitleRight">Фронтенд Разработчик</h2>
             </div>
             <div class="container hero__block">
@@ -86,7 +86,7 @@
                 <div class="about__block">
                     <h2 class="about__title" data-lang-key="aboutTitle">Обо мне</h2>
                     <p class="about__descr" data-lang-key="aboutDescription">
-                        Привет, я Александр, увлеченный созданием решений, ориентированных на пользователя. Я специализируюсь на UI/UX дизайне,
+                        Привет, я Александр, увлеченный созданием решений, ориентированных на пользователя. Я специализируюсь на вёрстке сайтов,
                         фронтенд-разработке и графическом дизайне, владею HTML, CSS, JavaScript, Node.js, jQuery,
                         Bootstrap и Figma. Помимо кодинга, я люблю играть в видеоигры, заниматься графическим дизайном и слушать
                         музыку. Давайте пообщаемся и воплотим ваши цифровые идеи в жизнь.
@@ -139,7 +139,7 @@
                                     <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="../img/php_icon_130857.webp" alt="PHP">
                                     <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
@@ -159,7 +159,7 @@
                                     <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="../img/php_icon_130857.webp" alt="PHP">
                                     <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
