--- a/RU/trinity.html
+++ b/RU/trinity.html
@@ -18,6 +18,7 @@
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
+            <div class="block__closed"></div>
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
@@ -92,7 +93,7 @@
                                 <img src="../img/file_type_html_icon_130541.svg" alt="HTML">
                                 <img src="../img/file_type_css_icon_130661.svg" alt="CSS">
                                 <img src="../img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="../img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="../img/php_icon_130857.webp" alt="PHP">
                                 <img src="../img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
