--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
         <section class="hero">
             <div class="hero__background-block" id="heroBackgroundBlock">
-                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">UI/UX Designer</h2>
+                <h2 class="hero__background-title left" data-lang-key="heroBackgroundTitleLeft">Website layout</h2>
                 <h2 class="hero__background-title right" data-lang-key="heroBackgroundTitleRight">Frontend Developer</h2>
             </div>
             <div class="container hero__block">
@@ -86,7 +86,7 @@
                 <div class="about__block">
                     <h2 class="about__title" data-lang-key="aboutTitle">About me</h2>
                     <p class="about__descr" data-lang-key="aboutDescription">
-                        Hi, I'm Alexander, passionate about creating user-centered solutions. I specialize in UI/UX design,
+                        Hi, I'm Alexander, passionate about creating user-centered solutions. I specialize in website layout,
                         frontend development and graphic design, I am proficient in HTML, CSS, JavaScript, Node.js, jQuery,
                         Bootstrap and Figma. Aside from coding, I love playing video games, graphic design, and listening to
                         music. Let's chat and bring your digital ideas to life
@@ -139,7 +139,7 @@
                                     <img src="img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/php_icon_130857.webp" alt="PHP">
                                     <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
@@ -159,7 +159,7 @@
                                     <img src="img/file_type_html_icon_130541.svg" alt="HTML">
                                     <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                                     <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                    <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                    <img src="img/php_icon_130857.webp" alt="PHP">
                                     <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                                 </div>
                             </div>
