--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
                                 <img src="img/file_type_html_icon_130541.svg" alt="HTML">
                                 <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                                 <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="img/php_icon_130857.webp" alt="PHP">
                                 <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                 <img src="img/file_type_html_icon_130541.svg" alt="HTML">
                                 <img src="img/file_type_css_icon_130661.svg" alt="CSS">
                                 <img src="img/javascript_icon_130900.svg" alt="JavaScript">
-                                <img src="img/php_horizontal_logo_icon_170852.svg" alt="PHP">
+                                <img src="img/php_icon_130857.webp" alt="PHP">
                                 <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
@@ -251,6 +251,25 @@
                             <div class="projects__block-icon">
                                 <img src="img/file_type_html_icon_130541.svg" alt="HTML">
                                 <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/figma_logo_icon_170157.svg" alt="Figma">
+                            </div>
+                        </div>
+                    </a>
+                    <a href="cookie.html" class="projects__card projects__card-animation">
+                        <div class="bkl projects__block-img">
+                            <img src="img/projects/cookie-img.png" alt="Cookie">
+                        </div>
+                        <div class="projects__card-text">
+                            <h3 class="projects__card-title" data-lang-key="trinityTitle">Cookie</h3>
+                            <span class="projects__technology" data-lang-key="rusTechnology">Frontend</span>
+                            <p class="projects__descr" data-lang-key="trinityDescription">
+                                Cookie application
+                            </p>
+                            <div class="projects__block-icon">
+                                <img src="img/file_type_html_icon_130541.svg" alt="HTML">
+                                <img src="img/file_type_css_icon_130661.svg" alt="CSS">
+                                <img src="img/javascript_icon_130900.svg" alt="JavaScript">
+                                <img src="img/angular-512.webp" alt="Angular">
                                 <img src="img/figma_logo_icon_170157.svg" alt="Figma">
                             </div>
                         </div>
