--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
     <div class="progress-bar" id="progressBar"></div>
     <header class="header">
         <div class="container header__block">
+            <div class="block__closed"></div>
             <nav class="header__nav scrollto">
                 <ul class="header__list list-reset">
                     <li class="header__item"><a href="index.html" class="header__link">Home</a></li>
