--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
                 <div class="footer__content">
                     <h2 class="footer__title" data-lang-key="footerTitle">Alex.</h2>
                     <p class="footer__subtitle" data-lang-key="footerSubtitle">
-                        I am a web developer living in Moldova. I have a very deep passion for Front End Development ❤ This site is made
-                        with a lot of love and passion.
+                        I am a web developer living in Moldova. I have a very deep passion for Front End Development
+                        <span>❤</span> This
+                        site is made with a lot of love and passion.
                     </p>
                     <small>
-                        <span data-lang-key="portfolioVersion">Portfolio v2.0</span>
-                        <span data-lang-key="copyright">© 2024 Alex</span>
+                        <span>Portfolio v2.0</span>
+                        © 2024 Alex
                     </small>
-
                 </div>
             </div>
         </div>
