Added resume files,and also changed images from png to webp

--- a/RO/about.html
+++ b/RO/about.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="about__page-block--content block">
                     <div class="about__page-block--img">
-                        <img src="../img/2024-04-27_01-18-29-028.jpg" alt="Foto">
+                        <img src="../img/2024-04-27_01-18-29-028.webp" alt="Foto">
                     </div>
                     <div class="about__page-content">
                         <p class="about__page-content--descr" data-lang-key="about_text">
@@ -88,7 +88,7 @@
                                 de echipă</span>, sunt pregătit să transform ideile dvs. digitale în realitate. Să ne aventurăm
                             împreună într-o călătorie inovatoare!
                         </p>
-                        <a href="#" class="about__page-download" data-lang-key="download_resume">
+                        <a href="../other/Resume RU.pdf" class="about__page-download" data-lang-key="download_resume">
                             <svg width="20" height="25" viewBox="0 0 20 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.6328 0.65625H2.85547C1.57976 0.65625 0.545654 1.69035 0.545654 2.96606V22.3685C0.545654 23.6442 1.57976 24.6783 2.85547 24.6783H16.7143C17.9901 24.6783 19.0242 23.6442 19.0242 22.3685V8.04765L11.6328 0.65625ZM10.7088 8.97158V2.5041L17.1763 8.97158H10.7088Z"
