--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                 <div class="projects__page-content" id="projects-content">
                     <a href="portfolio.html" class="projects__card projects__card-animation">
                         <div class="projects__block-img portfolio">
-                            <img src="img/projects/portfolio.png" alt="Portfolio">
+                            <img src="img/projects/portfolio.webp" alt="Portfolio">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="portfolioTitle">Portfolio</h3>
@@ -88,7 +88,7 @@
                     </a>
                     <a href="trinity.html" class="projects__card projects__card-animation">
                         <div class="bkl projects__block-img">
-                            <img src="img/projects/Trinity.png" alt="Trinity">
+                            <img src="img/projects/Trinity.webp" alt="Trinity">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="trinityTitle">Trinity</h3>
@@ -108,7 +108,7 @@
                     </a>
                     <a href="rivo.html" class="projects__card projects__card-animation">
                         <div class="rivo projects__block-img">
-                            <img src="img/projects/Rivo.png" alt="Rivo">
+                            <img src="img/projects/Rivo.webp" alt="Rivo">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title" data-lang-key="rivoTitle">Rivo</h3>
@@ -181,7 +181,7 @@
                     </a>
                     <a href="recidiviz.html" class="projects__card projects__card-animation">
                         <div class="recidiviz projects__block-img">
-                            <img src="img/projects/Recidiviz.png" alt="Recidiviz">
+                            <img src="img/projects/Recidiviz.webp" alt="Recidiviz">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Recidiviz</h3>
@@ -200,7 +200,7 @@
                     </a>
                     <a href="robin.html" class="projects__card projects__card-animation">
                         <div class="robin projects__block-img">
-                            <img src="img/projects/Robin.png" alt="Robin W">
+                            <img src="img/projects/Robin.webp" alt="Robin W">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">Robin W</h3>
@@ -220,7 +220,7 @@
                     </a>
                     <a href="vr.html" class="projects__card projects__card-animation">
                         <div class="vr projects__block-img">
-                            <img src="img/projects/VR.png" alt="VR Nas">
+                            <img src="img/projects/VR.webp" alt="VR Nas">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">VR Nas</h3>
@@ -240,7 +240,7 @@
                     </a>
                     <a href="wave.html" class="projects__card projects__card-animation">
                         <div class="wave projects__block-img">
-                            <img src="img/projects/W-Wave.png" alt="W-wave">
+                            <img src="img/projects/W-Wave.webp" alt="W-wave">
                         </div>
                         <div class="projects__card-text">
                             <h3 class="projects__card-title">W-wave Radio</h3>
