--- a/RO/index.html
+++ b/RO/index.html
@@ -116,7 +116,7 @@
                     <div class="projects__content">
                         <a href="portfolio.html" class="projects__card projects__card-portfolio">
                             <div class="projects__block-img portfolio">
-                                <img src="../img/projects/portfolio.png" alt="Portofoliu">
+                                <img src="../img/projects/portfolio.webp" alt="Portofoliu">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="portfolioTitle">Portofoliu</h3>
@@ -136,7 +136,7 @@
                         </a>
                         <a href="trinity.html" class="projects__card projects__card-trinity">
                             <div class="bkl projects__block-img">
-                                <img src="../img/projects/Trinity.png" alt="Trinity">
+                                <img src="../img/projects/Trinity.webp" alt="Trinity">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="trinityTitle">Trinity</h3>
@@ -157,7 +157,7 @@
                         </a>
                         <a href="rivo.html" class="projects__card projects__card-rivo">
                             <div class="rivo projects__block-img">
-                                <img src="../img/projects/Rivo.png" alt="Rivo">
+                                <img src="../img/projects/Rivo.webp" alt="Rivo">
                             </div>
                             <div class="projects__card-text">
                                 <h3 class="projects__card-title" data-lang-key="rivoTitle">Rivo</h3>
